# NewsNewt

./: .dockerignore  .editorconfig  .env.sample  .gitignore  LICENSE  Makefile  README.md  compose.yml  dockerfile  main.py  mkdocs.yml  pyproject.toml
.cursor/: Makefile
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml
config/: .env.sample  .gitkeep
docs/: DEPLOYMENT.md  TESTING.md  architecture.md  index.md  project-brief.md  technical.md
memory-bank/: BUILD-summary.md  PLAN-summary.md  VAN-summary.md  activeContext.md  code-review-details.md  development-guide.md  phase1-summary.md  plan-implementation.md  productContext.md  progress.md  projectbrief.md  refactoring-plan.md  style-guide.md  systemPatterns.md  tasks.md  techContext.md
memory-bank/creative/: creative-playwright-stealth.md
src/app/: __init__.py  config.py  crawler.py  extraction.py  main.py  models.py  routes.py
src/newsnewt/: __init__.py  api.py  archive.py  config.py  extractor.py  logging_config.py  main.py  models.py  rate_limit.py  utils.py
tests/: __init__.py  conftest.py  test_config.py  test_health.py  test_models.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_config.py  test_rate_limit.py  test_utils.py
