[project]
name = "newsnewt"
version = "0.1.0"
description = "Crawlee-based scraping microservice for n8n"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawlee[playwright]>=0.4.0",
    "playwright-stealth>=1.0.6",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]
[project.optional-dependencies]
dev = [
    "ruff>=0.14.6",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newsnewt"]
