[project]
name = "newsnewt"
version = "0.1.0"
description = "Crawlee-based scraping microservice for n8n"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawlee[playwright]>=0.4.0",
    "playwright-stealth>=1.0.6",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pylint>=4.0.4",
    "pyright>=1.1.408",
    "bandit>=1.9.2",
    "radon>=6.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.13.1",
    "snakeviz>=2.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.6",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "flake8>=7.3.0",
    "black>=25.12.0",
    "isort>=7.0.0",
    "pylint>=4.0.4",
    "pyright>=1.1.407",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "coverage>=7.10.6",
    "radon>=6.0.1",
    "snakeviz>=2.2.2",
    "bandit>=1.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = false
[[tool.mypy.overrides]]
module = "playwright_stealth.*"
ignore_missing_imports = true

[tool.pylint.main]
max-line-length = 120
disable = [
    "line-too-long",
    "logging-fstring-interpolation",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-nested-blocks",
    "broad-exception-caught",
    "redefined-outer-name",
    "import-outside-toplevel",
    "protected-access",
    "unused-variable",
    "raise-missing-from",
]

[tool.pylint.format]
max-line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/app"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
